visit list, admin and doctor panels

--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -31,4 +31,11 @@
 
   <!-- <app-visit-details-for-admin></app-visit-details-for-admin> -->
   <!-- <app-visit-details-for-doctor></app-visit-details-for-doctor> -->
+
+  <!-- <app-visits-list-for-admin></app-visits-list-for-admin> -->
+  <!-- <app-visits-list-for-doctor></app-visits-list-for-doctor> -->
+
+
+  <!-- <app-admin-home-page></app-admin-home-page> -->
+  <app-doctor-home-page></app-doctor-home-page>
 </div>
