Working lists for admin

--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -37,5 +37,5 @@
 
 
   <!-- <app-admin-home-page></app-admin-home-page> -->
-  <app-doctor-home-page></app-doctor-home-page>
+  <!-- <app-doctor-home-page></app-doctor-home-page> -->
 </div>
