--- a/medical_visits_angular/src/app/forms_css.css
+++ b/medical_visits_angular/src/app/forms_css.css
@@ -2,7 +2,7 @@ form, #main-container {
     text-align: center;
     margin: auto;
     width: 700px;
-    height: 1020px;
+    /* height: 1020px; */
 }
 
 input {
