stylizing details list, nav in edit doctor form

--- a/medical_visits_angular/src/app/list/doctors-list/details-doctor-for-admin/details-doctor-for-admin.component.html
+++ b/medical_visits_angular/src/app/list/doctors-list/details-doctor-for-admin/details-doctor-for-admin.component.html
@@ -19,7 +19,7 @@
       <input name="phoneNr" id="phoneNr" placeholder="phoneNr" class="large_input" readonly [value]="doctorsData.phoneNr">
   </div>
 
-  <div class="inputs">
+  <div class="li-inputs">
       <!-- Specjalizacja lekarza -->
       <ul>
         <li *ngFor="let speciality of doctorsData.specialities">
