--- a/medical_visits_angular/src/app/list/doctors-list/edit-doctor-for-admin/edit-doctor-for-admin.component.css
+++ b/medical_visits_angular/src/app/list/doctors-list/edit-doctor-for-admin/edit-doctor-for-admin.component.css
@@ -1,8 +1,11 @@
 .delete-button {
-  width: 30px;
-  height: 15px;
+  width: 60px;
+  height: 20px;
   font-size: 10px;
   float: right;
+  background-color: white;
+  border: 5px solid #28587A;
+  font-weight: bold;
 }
 
 #success-message {
@@ -11,4 +14,8 @@
 
 #error-message {
   color: coral;
+}
+
+li{
+  margin-left: 60px;
 }
