--- a/medical_visits_angular/src/app/list/doctors-list/edit-doctor-for-admin/edit-doctor-for-admin.component.html
+++ b/medical_visits_angular/src/app/list/doctors-list/edit-doctor-for-admin/edit-doctor-for-admin.component.html
@@ -35,7 +35,7 @@
             </div>
         </div>
 
-        <div class="inputs">
+        <div class="li-inputs">
             <!-- Specjalizacja lekarza -->
             <select class="list_input" id="select_input"  name="filterType" ngModel (ngModelChange)="addSpeciality($event)">
               <option value="" disabled>Choose filter type</option>
