--- a/medical_visits_angular/src/app/forms_css.css
+++ b/medical_visits_angular/src/app/forms_css.css
@@ -118,3 +118,42 @@ input[type="radio"] {
     margin: 5px 0px 10px 5px;
     box-shadow: 20px 20px 100px rgba(0, 0, 0, 0.25);
 }
+
+.li-inputs-searchbar{
+    height: 50px;
+}
+
+.li-inputs{
+    width: 100%;
+    margin: 5px 5px 0px 5px;
+}
+
+ul{
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+li {
+    margin-bottom: 10px;
+    color: #28587A;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+select {
+    width: 200px;
+    height: 30px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    font-size: 16px;
+    border: none;
+    background-color: #ffffff;
+    color: #28587A;
+}
+
+option {
+    text-align: center;
+}
