--- a/medical_visits_angular/src/app/list/doctors-list/doctors-list.component.css
+++ b/medical_visits_angular/src/app/list/doctors-list/doctors-list.component.css
@@ -27,6 +27,17 @@
     border: none;
 }
 
+select{
+    width: 200px;
+    height: 30px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    font-size: 16px;
+    border: none;
+    background-color: #ffffff;
+    color: #28587A;
+}
+
 option{
     text-align: center;
 }
