--- a/medical_visits_angular/src/app/list/patients-list/edit-patient-for-admin/edit-patient-for-admin.component.css
+++ b/medical_visits_angular/src/app/list/patients-list/edit-patient-for-admin/edit-patient-for-admin.component.css
@@ -1,16 +1,22 @@
 #doctors-list {
-  height:200px;
-  width:50%;
-  overflow:hidden;
-  overflow-y:scroll;
-  float: left;
+  height: 200px;
+  width: 98%;
+  align-items: center;
+  overflow: hidden;
+  overflow-y: scroll;
   list-style-type: none;
   text-align: center;
   background: #FFFFFF;
   box-shadow: 0px 5px 100px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   border: none;
-  font-size: 20px;
+  font-size: 16px;
+  margin-bottom: 30px;
+  margin: auto;
+}
+
+.margin-bottom{
+  margin-bottom: 30px;
 }
 
 li > button {
