--- a/medical_visits_angular/src/app/nav-menu/nav-menu.component.css
+++ b/medical_visits_angular/src/app/nav-menu/nav-menu.component.css
@@ -24,6 +24,13 @@
     margin-left: 2px;
 }
 
+.menu-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 80%;
+}
+
 #home_page,
 #contact,
 #doctor,
