--- a/medical_visits_angular/src/app/nav-menu/nav-menu.component.css
+++ b/medical_visits_angular/src/app/nav-menu/nav-menu.component.css
@@ -13,7 +13,7 @@
     box-shadow: 0px 5px 100px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
     text-align: center;
-    
+
     align-items: center;
 }
 
@@ -25,16 +25,23 @@
 }
 
 .menu-items {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 80%;
+    align-items: center;
+    height: 100%;
 }
 
 #home_page,
 #contact,
 #doctor,
-#calendar {
+#calendar,
+#patients {
     width: 50px;
     margin-left: 2px;
 }
