--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -4,7 +4,8 @@
   <app-nav-menu></app-nav-menu>
   <div *ngIf="userLogged"><app-top-buttons-logged (logoutButtonClicked)="logout()"></app-top-buttons-logged></div>
   <div *ngIf="!userLogged"><app-top-buttons-unlogged></app-top-buttons-unlogged></div>
-  <router-outlet></router-outlet>
+  <!-- <router-outlet></router-outlet> -->
+
 
 
   <!-- <app-home-page></app-home-page> -->
@@ -14,6 +15,7 @@
   <!-- <app-home-page-logged></app-home-page-logged> -->
   <!-- <app-doctors-list></app-doctors-list> -->
   <!-- <app-patients-list></app-patients-list> -->
+  <app-patients-list-for-doctor></app-patients-list-for-doctor>
 
 
 
