--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -15,7 +15,7 @@
   <!-- <app-home-page-logged></app-home-page-logged> -->
   <!-- <app-doctors-list></app-doctors-list> -->
   <!-- <app-patients-list></app-patients-list> -->
-  <app-patients-list-for-doctor></app-patients-list-for-doctor>
+  <!-- <app-patients-list-for-doctor></app-patients-list-for-doctor> -->
 
 
 
@@ -26,13 +26,16 @@
   <!-- <app-edit-patient-for-doctor></app-edit-patient-for-doctor> -->
   <!-- <app-edit-doctor-for-admin></app-edit-doctor-for-admin> -->
 
-  <!-- <app-details-patient-for-admin></app-details-patient-for-admin> -->
-  <!-- <app-details-patient-for-doctor></app-details-patient-for-doctor> -->
-  <!-- <app-details-doctor-for-admin></app-details-doctor-for-admin> -->
+  <!-- <app-details-patient-for-admin></app-details-patient-for-admin>
+  <app-details-patient-for-doctor></app-details-patient-for-doctor>
+  <app-details-doctor-for-admin></app-details-doctor-for-admin> -->
 
 
-  <!-- <app-visit-details-for-admin></app-visit-details-for-admin> -->
-  <!-- <app-visit-details-for-doctor></app-visit-details-for-doctor> -->
+  <!-- <app-visit-details-for-admin></app-visit-details-for-admin>
+  <app-visit-details-for-doctor></app-visit-details-for-doctor>
+  <app-visit-edit-for-doctor></app-visit-edit-for-doctor> -->
+
+  <!-- <app-data-edit-for-doctor></app-data-edit-for-doctor> -->
 
   <!-- <app-visits-list-for-admin></app-visits-list-for-admin> -->
   <!-- <app-visits-list-for-doctor></app-visits-list-for-doctor> -->
@@ -40,4 +43,12 @@
 
   <!-- <app-admin-home-page></app-admin-home-page> -->
   <!-- <app-doctor-home-page></app-doctor-home-page> -->
+
+  <!-- <app-appointment></app-appointment> -->
+  <!-- <app-contact-page></app-contact-page> -->
+
+  <!-- <app-specializations-unlogged></app-specializations-unlogged>
+  <app-specializations-logged></app-specializations-logged> -->
+  <!-- <app-specializations-list-unlogged></app-specializations-list-unlogged> -->
+  <app-specializations-list-logged></app-specializations-list-logged>
 </div>
