--- a/medical_visits_angular/src/app/visits/visit-edit-for-doctor/visit-edit-for-doctor.component.html
+++ b/medical_visits_angular/src/app/visits/visit-edit-for-doctor/visit-edit-for-doctor.component.html
@@ -1,4 +1,4 @@
-<div id="head">DETAILS</div>
+<div id="head">EDIT</div>
 
 <form #form="ngForm">
     <div class="inputs">
@@ -31,7 +31,7 @@
 
     <div class="info_inputs">
         <label for="">Info</label>
-        <input name="info" id="info" placeholder="info" class="info_input" readonly>
+        <input name="info" id="info" placeholder="info" class="info_input">
     </div>
 
     <button type="submit" class="inputs">SAVE</button>
