--- a/medical_visits_angular/src/app/list/doctors-list/details-doctor-for-admin/details-doctor-for-admin.component.html
+++ b/medical_visits_angular/src/app/list/doctors-list/details-doctor-for-admin/details-doctor-for-admin.component.html
@@ -5,22 +5,26 @@
     <div id="names_input" class="inputs">
       <div>
           <!-- Imię -->
+          <label for="firstName">First Name</label>
           <input name="firstName" id="firstName" placeholder="firstName" class="small_input" readonly [value]="doctorsData.firstName">
       </div>
 
       <div>
           <!-- Nazwisko -->
+          <label for="lastName">Last Name</label>
           <input name="lastName" id="lastName" placeholder="lastName" class="small_input" readonly [value]="doctorsData.lastName">
       </div>
   </div>
 
   <div class="inputs">
       <!-- Numer telefonu -->
+      <label for="phoneNr">Phone number</label>
       <input name="phoneNr" id="phoneNr" placeholder="phoneNr" class="large_input" readonly [value]="doctorsData.phoneNr">
   </div>
 
   <div class="li-inputs">
       <!-- Specjalizacja lekarza -->
+      <label>Specialities</label>
       <ul>
         <li *ngFor="let speciality of doctorsData.specialities">
             {{speciality.specialityName}}
@@ -30,6 +34,7 @@
 
   <div class="inputs">
       <!-- E-mail -->
+      <label for="email">E-mail</label>
       <input type="email" name="email" id="email" placeholder="email" class="large_input" readonly [value]="doctorsData.email">
   </div>
 
