--- a/medical_visits_angular/src/app/list/doctors-list/details-patient-for-doctor/details-patient-for-doctor.component.html
+++ b/medical_visits_angular/src/app/list/doctors-list/details-patient-for-doctor/details-patient-for-doctor.component.html
@@ -5,43 +5,51 @@
     <div id="names_input" class="inputs">
         <div>
             <!-- Imię -->
+            <label for="firstName">First Name</label>
             <input name="firstName" id="firstName" placeholder="firstName" class="small_input" readonly>
         </div>
 
         <div>
             <!-- Nazwisko -->
+            <label for="lastName">Last Name</label>
             <input name="lastName" id="lastName" placeholder="lastName" class="small_input" readonly>
         </div>
     </div>
 
     <div class="inputs">
         <!-- Numer telefonu -->
+        <label for="phoneNr">Phone number</label>
         <input name="phoneNr" id="phoneNr" placeholder="phoneNr" class="large_input" readonly>
     </div>
 
     <div class="inputs">
         <!-- PESEL -->
+        <label for="pesel">PESEL number</label>
         <input name="pesel" id="pesel" placeholder="pesel" class="large_input" readonly>
     </div>
 
     <div class="inputs">
         <!-- Kraj -->
+        <label for="country">Country</label>
         <input name="country" id="country" placeholder="country" class="large_input" readonly>
     </div>
 
     <div class="inputs">
         <!-- Ulica -->
+        <label for="street">Street</label>
         <input name="street" id="street" placeholder="street" class="large_input" readonly>
     </div>
 
     <div class="inputs addresses_inputs">
         <div>
             <!-- Miasto -->
+            <label for="city">City</label>
             <input name="city" id="city" placeholder="city" class="small_input" readonly>
         </div>
 
         <div>
             <!-- Kod pocztowy -->
+            <label for="postalCode">Postal Code</label>
             <input name="postalCode" id="postalCode" placeholder="postalCode" class="small_input" readonly>
         </div>
     </div>
@@ -49,11 +57,13 @@
     <div class="inputs addresses_inputs">
         <div>
             <!-- Numer domu -->
+            <label for="houseNr">House number</label>
             <input name="houseNr" id="houseNr" placeholder="houseNr" class="small_input" readonly>
         </div>
 
         <div>
             <!-- Numer mieszkania -->
+            <label for="apartmentNr">Apartment number</label>
             <input name="apartmentNr" id="apartmentNr" placeholder="apartmentNr" class="small_input" readonly>
         </div>
     </div>
@@ -61,6 +71,7 @@
 
     <div class="inputs">
         <!-- E-mail -->
+        <label for="email">E-mail</label>
         <input type="email" name="email" id="email" placeholder="email" class="large_input" readonly>
     </div>
 
