--- a/medical_visits_angular/src/app/list/visits-list-for-doctor/visits-list-for-doctor.component.html
+++ b/medical_visits_angular/src/app/list/visits-list-for-doctor/visits-list-for-doctor.component.html
@@ -17,60 +17,20 @@
         <div class="list-div list-header-element">Date</div>
         <div class="list-div list-header-element">Action</div>
     </li>
-    <li class="li-element">
-        <div class="li-element-div">Zbychu</div>
-        <div class="li-element-div">Zbychowski</div>
-        <div class="li-element-div">22113742069</div>
-        <div class="li-element-div">213769420</div>
-        <div class="li-element-div">10-05-2023</div>
-        <div class="li-element-div">
-            <a>Details</a>
-        </div>
-    </li>
-    <li class="li-element">
-        <div class="li-element-div">Zbychu</div>
-        <div class="li-element-div">Zbychowski</div>
-        <div class="li-element-div">22113742069</div>
-        <div class="li-element-div">213769420</div>
-        <div class="li-element-div">10-05-2023</div>
-        <div class="li-element-div">
-            <a>Details</a>
-        </div>
-    </li>
-    <li class="li-element">
-        <div class="li-element-div">Zbychu</div>
-        <div class="li-element-div">Zbychowski</div>
-        <div class="li-element-div">22113742069</div>
-        <div class="li-element-div">213769420</div>
-        <div class="li-element-div">10-05-2023</div>
-        <div class="li-element-div">
-            <a>Details</a>
-        </div>
-    </li>
-    <li class="li-element">
-        <div class="li-element-div">Zbychu</div>
-        <div class="li-element-div">Zbychowski</div>
-        <div class="li-element-div">22113742069</div>
-        <div class="li-element-div">213769420</div>
-        <div class="li-element-div">10-05-2023</div>
-        <div class="li-element-div">
-            <a>Details</a>
-        </div>
-    </li>
-    <li class="li-element">
-        <div class="li-element-div">Zbychu</div>
-        <div class="li-element-div">Zbychowski</div>
-        <div class="li-element-div">22113742069</div>
-        <div class="li-element-div">213769420</div>
-        <div class="li-element-div">10-05-2023</div>
-        <div class="li-element-div">
-            <a>Details</a>
-        </div>
-    </li>
-    
-    <li id="list-footer">
-        <button class="footer-btn" id="prev-btn">&lt;</button>
-        <div class="list-counter"></div>
-        <button class="footer-btn" id="next-btn">&gt;</button>
-    </li>
+    <li class="li-element" *ngFor="let visit of visits; let i = index">
+      <div class="li-element-div">{{visit.doctor.firstName}} {{visit.doctor.lastName}}</div>
+      <div class="li-element-div">{{visit.patient.lastName}}</div>
+      <div class="li-element-div">{{visit.patient.pesel}}</div>
+      <div class="li-element-div">{{visit.patient.phoneNr}}</div>
+      <div class="li-element-div">{{getDate(visit.timeStamp)}}</div>
+      <div class="li-element-div">
+        <a (click)="goToDetails(i)">Details</a>&nbsp;&nbsp;&nbsp;
+        <a (click)="goToEdit(i)">Edit</a>
+      </div>
+  </li>
+  <li id="list-footer">
+    <button class="footer-btn" id="prev-btn">&lt;</button>
+      <div class="list-counter">{{currentPage + 1 + " of " + totalPages}}</div>
+    <button class="footer-btn" id="next-btn">&gt;</button>
+  </li>
 </ul>
