poprawiony edit i details w listach dla lekarza

--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -23,13 +23,13 @@
 
 
 
-  <!-- <app-edit-patient-for-admin></app-edit-patient-for-admin> -->
-  <!-- <app-edit-patient-for-doctor></app-edit-patient-for-doctor> -->
+  <!-- <app-edit-patient-for-admin></app-edit-patient-for-admin>
+  <app-edit-patient-for-doctor></app-edit-patient-for-doctor> -->
   <!-- <app-edit-doctor-for-admin></app-edit-doctor-for-admin> -->
 
   <!-- <app-details-patient-for-admin></app-details-patient-for-admin>
-  <app-details-patient-for-doctor></app-details-patient-for-doctor>
-  <app-details-doctor-for-admin></app-details-doctor-for-admin> -->
+  <app-details-patient-for-doctor></app-details-patient-for-doctor> -->
+  <!-- <app-details-doctor-for-admin></app-details-doctor-for-admin> -->
 
 
   <!-- <app-visit-details-for-admin></app-visit-details-for-admin>
