--- a/medical_visits_angular/src/app/nav-menu/nav-menu.component.html
+++ b/medical_visits_angular/src/app/nav-menu/nav-menu.component.html
@@ -1,5 +1,5 @@
 <div id="Menu">
-  <div><img src="./assets/MV_icon.png" id="MV_menuLogo"></div>
+  <div><img src="./assets/MV_icon.png" id="MV_menuLogo" routerLink=""></div>
   <div *ngIf="!userLogged">
     <div class="menu-items">
       <div><img src="./assets/home_page.png" class="menu_icons" id="home_page" routerLink=""></div>
