--- a/medical_visits_angular/src/app/contact-page/contact-page.component.css
+++ b/medical_visits_angular/src/app/contact-page/contact-page.component.css
@@ -1,9 +1,9 @@
 .contact_page_photo {
     position: absolute;
-    top: 175px;
-    left: 700px;
-    width: 1000px;
-    height: 560px;
+    top: 20vh;
+    left: 42vw;
+    width: 52vw;
+    height: 60vh;
     background-image: url("src/assets/contact.jpg");
     background-size: cover;
     background-position: center;
@@ -13,10 +13,9 @@
 
 #contact-pane{
     position: absolute;
-    width: 380px;
-    height: 423px;
-    left: 200px;
-    top: 312px;
+    width: 20vw;
+    left: 15vw;
+    top: 34vh;
     background: #FFFFFF;
     box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.25);
     border-radius: 13px;
@@ -29,4 +28,8 @@
 h1, h2{
     color: #28587A;
     font-weight: bold;
+}
+
+p:last-child{
+    margin-bottom: 3vh;
 }
