--- a/medical_visits_angular/src/app/home-page/home-page.component.css
+++ b/medical_visits_angular/src/app/home-page/home-page.component.css
@@ -1,6 +1,6 @@
 .main_button_style {
-    width: 450px;
-    height: 100px;
+    width: 28vw;
+    height: 18vh;
     background: #FFFFFF;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
@@ -13,11 +13,11 @@
 }
 
 .main_page_photo {
-    position: absolute;
-    top: 150px;
-    left: 800px;
-    width: 600px;
-    height: 450px;
+    position:absolute;
+    top: 20vh;
+    left: 47vw;
+    width: 90vh;
+    height: 70vh;
     background-image: url("src/assets/main_page_image.png");
     background-size: cover;
     background-position: center;
@@ -30,14 +30,19 @@
 
 .main_buttons_position{
     position: absolute;
-    top: 350px;
-    left: 200px;
+    top: 35vh;
+    left: 16vw;
 }
 
 .main_button{
     position: absolute;
-    top: 350px;
-    left: 200px;
+    top: 35vh;
+    left: 16vw;
+}
+
+.main_button_style:active {
+    background: #28587A;
+    color: #FFFFFF;
 }
 
 .main_buttons_multiple{
@@ -47,10 +52,10 @@
 
 #main_page_head {
     position: absolute;
-    top: 200px;
-    left: 200px;
+    top: 20vh;
+    left: 15vw;
 
     color: #28587A;
-    font-size: 80px;
+    font-size: 5vw;
     font-weight: bold;
 }
