--- a/medical_visits_angular/src/app/list/doctors-list/doctors-list.component.css
+++ b/medical_visits_angular/src/app/list/doctors-list/doctors-list.component.css
@@ -1,35 +1,35 @@
 .list-head{
     position: absolute;
-    top: 130px;
-    left: 100px;
+    top: 10vh;
+    left: 6vw;
     color: #28587A;
-    font-size: 50px;
+    font-size: 5vw;
     font-weight: bold;
 }
 
 .list-items{
     position: absolute;
-    top: 200px;
-    left: 100px;
+    top: 25vh;
+    left: 6vw;
     display: flex;
 }
 
 .list-input-item {
-    margin-right: 30px;
+    margin-right: 3vw;
 }
 
 .list_input{
-    height: 45px;
+    height: 8vh;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
-    font-size: 25px;
+    font-size: 2vw;
     font-weight: bold;
     border: none;
 }
 
 select{
-    width: 200px;
-    height: 30px;
+    width: 17vw;
+    height: 3vh;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
     font-size: 16px;
@@ -43,27 +43,27 @@ option{
 }
 
 #search_input{
-    width: 800px;
+    width: 50vw;
     text-align: left;
     padding-left: 40px;
 }
 
 #select_input{
-    width: 320px;
+    width: 23vw;
 }
 
 #search_button{
-    width: 200px;
+    width: 13vw;
     background: #28587A;
     color: #FFFFFF;
 }
 
 ul {
     position: absolute;
-    top: 280px;
-    left: 100px;
-    width: 1380px;
-    height: 500px;
+    top: 35vh;
+    left: 6vw;
+    width: 92vw;
+    height: 65vh;
     border-radius: 20px;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
     list-style-type: none;
@@ -90,13 +90,13 @@ li {
 
 .list-header-element {
     color: #28587A;
-    font-size: 20px;
+    font-size: 1.2vw;
     font-weight: bold;
 }
 
 .list-div {
     float: left;
-    width: 20%;
+    width: 15vw;
 }
 
 li:last-child {
@@ -123,7 +123,7 @@ li:last-child {
 }
 
 .li-element-div{
-    width: 20%;
+    width: 15vw;
     float: left;
 }
 
